[jb] GH-1721 HUE-9419 curvedArrow issues when Job Dashboard has horizontal Scrollbar (asnaik) (#1722)

--- a/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
+++ b/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
@@ -395,4 +395,8 @@
     display: inline-block;
     float: initial;
   }
+
+  #workflow-page-graph {
+    position: relative;
+  }
 }
